Made the wind speed, icon, humidity as well as weather description change according to the city's weather

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
           <div>
             <h1 class="current-city" id="current-city">Paris</h1>
             <p class="current-details">
-              <span id="current-date"></span>, moderate rain <br />
-              Humidity: <strong>87%</strong>, Wind: <strong>7.2km/h</strong>
+              <span id="current-date"></span>,<span id="weather-description">moderate rain</span>  <br />
+              Humidity: <strong><span id="Humidity">87</span> %</strong>, Wind: <strong><span id="windSpeed">7.2</span>km/hr</strong>
             </p>
           </div>
           <div class="current-temperature">
-            <span class="current-temperature-icon">☀️</span
-            ><span class="current-temperature-value" id="current-temperature"
-              >24</span
+            <span class="current-temperature-icon" id="weatherIcon"><img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/scattered-clouds-night.png" alt="" id="iconImage"></span>
+            <span class="current-temperature-value" id="current-temperature"
+              >4</span
             ><span class="current-temperature-unit">°C</span>
           </div>
         </div>
